# model-size-selection

./: .dockerignore  .gitignore  Dockerfile  LLM_classifier.py  api.py  batch.jsonl  benchmark_model_loads.py  benchmark_model_loads.sh  download_checkpoint.py  download_hf_models.py  entrypoint.sh  examples.jsonl  gemma_classifier.py  merge_benchmark_results.py  model_fine_tune.py  model_inference.py  pyproject.toml  runpod_client.py  runpod_handler.py  utils.ipynb
experiments/: benchmark_model_loads.sh  costs.json  fill_costs.py  merged_model_loads.json  utils.ipynb
